# data-voyager

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml
assets/: user_stats.ndjson
data/: teams.csv
examples/: arrow.rs  datafusion.rs  demo.rs  describe.rs  describe_v2.rs  duck.rs  parquet.rs  polars.rs  repl.rs  spawn_blocking.rs
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/fusion/: describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
