[package]
name = "data-voyager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = "52.1.0"
clap = { version = "4.5.9", features = ["derive"] }
datafusion = "40.0.0"
enum_dispatch = "0.3.13"
polars = { version = "0.41.3", features = ["lazy", "parquet", "sql"] }
reedline-repl-rs = { version = "1.1.1", features = ["derive"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "rt"] }
