[package]
name = "data-voyager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = "52.1.0"
clap = { version = "4.5.9", features = ["derive"] }
crossbeam-channel = "0.5.13"
datafusion = "40.0.0"
datafusion-expr = "40.0.0"
dirs = "5.0.1"
duckdb = { version = "1.0.0", features = ["bundled"] }
enum_dispatch = "0.3.13"
oneshot = "0.1.8"
polars = { version = "0.41.3", features = ["lazy", "parquet", "sql"] }
reedline-repl-rs = { version = "1.1.1", features = ["derive"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "rt"] }
